[package]
name = "nes"
version = "0.1.0"
authors = ["Eric"]
edition = "2018"

[[bin]]
name = "nes"
path = "bin/mod.rs"

[dependencies]
clap = "2.33.0"
gio = "0.6.0"

[dependencies.gtk]
version = "0.6.0"
features = ["v3_16"]

[dependencies.piston]
version = "0.42.0"

[dependencies.libnes]
path = "../libnes"