[package]
name = "nes"
version = "0.1.0"
authors = ["Eric"]
edition = "2018"

[[bin]]
name = "nes"
path = "bin/mod.rs"

[dependencies]
clap = "2.33.0"
piston = "0.42.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"

[dependencies.libnes]
path = "../libnes"